[package]
name = "strangemeadowlark"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
keywords = ["starlark"]
categories = ["development-tools"]
description = "Parser for the Starlark configuration language. Ported from https://github.com/google/starlark-go"
repository = "https://github.com/google/strangemeadowlark/"

[dependencies]
anyhow = "1.0"
num-bigint = "0.4"
unicode_categories = "0.1"
bumpalo = "3.14"
lazy_static = "1.4.0"
