[package]
name = "strangemeadowlark"
version = "0.4.5"
edition = "2021"
license = "Apache-2.0"
keywords = ["starlark"]
categories = ["development-tools"]
description = "Parser for the Starlark configuration language. Ported from https://github.com/google/starlark-go"
repository = "https://github.com/google/strangemeadowlark/"

[dependencies]
anyhow = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
unicode_categories = "0.1"
bumpalo = "3.14"
thiserror = "2"

[dev-dependencies]
googletest = "0.13"
